Take pageScaleFactor into account for MouseRelatedEvents. https://bugs.webkit.org/show_bug.cgi?id=67592

Reviewed by Tony Gentilcore.

Source/WebCore:

Tests: fast/events/page-scaled-mouse-click-iframe.html
       fast/events/page-scaled-mouse-click.html

* dom/MouseRelatedEvent.cpp:
(WebCore::contentsScrollOffset):
(WebCore::MouseRelatedEvent::MouseRelatedEvent):
(WebCore::frameScaleFactor):
(WebCore::MouseRelatedEvent::computePageLocation):
(WebCore::MouseRelatedEvent::computeRelativePosition):

LayoutTests:

* fast/events/page-scaled-mouse-click-expected.txt: Added.
* fast/events/page-scaled-mouse-click-iframe-expected.txt: Added.
* fast/events/page-scaled-mouse-click-iframe.html: Added.
* fast/events/page-scaled-mouse-click.html: Added.
* fast/events/resources/page-scaled-mouse-click-iframe-inner.html: Added.
* fast/events/script-tests/page-scaled-mouse-click-iframe.js: Added.
():
(clearEventLog):
(testEvents):
(iframeLoaded):
* fast/events/script-tests/page-scaled-mouse-click.js: Added.
():
(clearEventLog):
(sendEvents):
(testEvents):


Canonical link: https://commits.webkit.org/85556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96798 268f45cc-cd09-0410-ab3c-d52691b4dbfc